2010-10-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (bind-on-slot): Add an optional parameter
	to bind the current child from the configuration file.

2010-10-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (absorb-window-nw-hook): Absorb new
	window hook: the frame absorb all new windows that match
	nw-absorb-test frame data slot.

2010-09-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Show window
	title in accel window.

2010-09-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* configure: Use the Xavier Maillard clfswm script in contrib to
	build an executable in the standard way.

2010-09-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	New functions. Add a window on each child in the expose mode to
	quickly select them.

	* src/clfswm-internal.lisp (child-x, child-y, child-width)
	(child-height): New methods to get real child coordinates.

2010-09-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (*-layout): Use child-position.

	* src/clfswm-internal.lisp (child-position): New function.

	* src/clfswm-expose-mode.lisp (expose-windows-mode)
	(expose-all-windows-mode): Use a generic mode.

	* src/xlib-util.lisp (with-handle-event-symbol): Use a filled list
	with handle-event-fun symbols instead of inspecting clfswm
	internals symbols on each mode change.

	* src/clfswm-expose-mode.lisp: Move and rename present*-windows in
	a separate clfswm-expose-mode.lisp file.

	* src/clfswm-util.lisp (speed-mouse-right, speed-mouse-down): Use
	screen size instead of hardcoded test coordinates.

2010-09-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (speed-mouse-reset, speed-mouse-left)
	(speed-mouse-right, speed-mouse-up, speed-mouse-down)
	(speed-mouse-undo, speed-mouse-first-history): New functions to